syntax = "proto3";

package asset_tracker.asset_common;
option go_package = "asset-tracker/proto/asset_common";

message AssetObject {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated AssetAttribute attributes = 4;
}

message AssetAttribute {
  string name = 1;
  string description = 2;
}
