syntax = "proto3";

import "proto/asset_common.proto";

package asset_tracker.asset_service;
option go_package = "asset-tracker/proto/asset_service";

service Asset {
  rpc CreateAsset(CreateAssetRequest) returns (CreateAssetResponse);
  rpc GetAsset(GetAssetRequest) returns (GetAssetResponse);
  rpc ListAssets(ListAssetsRequest) returns (ListAssetsResponse);
}

message CreateAssetRequest {
  string name = 1;
  string description = 2;
  repeated asset_tracker.asset_common.AssetAttribute attributes = 3;
}

message CreateAssetResponse {
  asset_tracker.asset_common.AssetObject asset = 1;
}

message GetAssetRequest {
  string id = 1;
}

message GetAssetResponse {
  asset_tracker.asset_common.AssetObject asset = 1;
}

message ListAssetsRequest {
  uint64 max_items = 1;
  optional string next_token = 2;
}

message ListAssetsResponse {
  repeated asset_tracker.asset_common.AssetObject assets = 1;
  optional string next_token = 2;
}
